@@ -39,6 +39,7 @@ A. Paper about MathGL!!!
 19. Update docs about Cone (style '4', '6', '8')
 
 20. http://en.wikipedia.org/wiki/Autocorrelation#Efficient_computation
+21. Check mglData::Export + Import
 
 22. Command 'resize' should take 0 (i.e. initial one) for default sizes
 23. check if all "value" options are described (see hist, )
